StringContainer: Float constructors were deprecated in Java 9